--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,8 +24,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: "true"
-        show-sql: "true"
+        format_sql: 'true'
+        show-sql: 'true'
     hibernate:
       ddl-auto: update
     generate-ddl: true
@@ -35,4 +35,4 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://3.37.155.50:8761/eureka
