--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9999
+  port: 0
 
 spring:
   cloud:
@@ -35,10 +35,10 @@ spring:
     hibernate:
       ddl-auto: update
     generate-ddl: true
-#
-#eureka:
-#  client:
-#    register-with-eureka: true
-#    fetch-registry: true
-#    service-url:
-#      defaultZone: http://3.37.155.50:8761/eureka
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://3.37.155.50:8761/eureka
